--- a/templates/home.html
+++ b/templates/home.html
@@ -25,11 +25,17 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-	        <li><a href="#">Browse</a></li>
+	        <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
+	        <!--<li><a href="/browse">Browse</a></li>-->
 	      </ul>
+	      <form class="navbar-form navbar-right">
+	             <div class="form-group">
+	               <input type="text" class="form-control" placeholder="Search">
+	             </div>
+	             <button type="submit" class="btn btn-default">Submit</button>
+	      </form>
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#">Login</a></li>
+	        <li><a href="/authenticate">Login</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
@@ -44,13 +50,9 @@
   		</div>
   	</div>
 
-  	<form class="container">
-  	  <div class="form-group">
-  	  	<p>Look up a food item.</p>
-  	    <input type="text" class="form-control" placeholder="Search">
-  	  </div>
-  	  <button type="submit" class="btn btn-default">Submit</button>
-  	</form>
+  	<div class="container">
+  		<p>This is what my website does</p>
+  	</div>
 
 </body>
 </html>
