--- a/templates/display.html
+++ b/templates/display.html
@@ -26,14 +26,21 @@
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
 	        <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
-	        <li><a href="/browse">Browse</a></li>
+	        <!--<li><a href="/browse">Browse</a></li>-->
 	      </ul>
+	      <form class="navbar-form navbar-right">
+	             <div class="form-group">
+	               <input type="text" class="form-control" placeholder="Search">
+	             </div>
+	             <button type="submit" class="btn btn-default">Submit</button>
+	      </form>
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="/login">Login</a></li>
+	        <li><a href="/authenticate">Login</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
+
 
 	<h2><center><b>{{foodname}}</b><center></h2>
 	
