changed wrong flask var

--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -62,7 +62,7 @@
         </form>
       </div>
       <div class="col-sm-6 text-center">
-        {{ error }}
+        {{ message }}
         <h1>Register</h1>
         <form action="/authenticate/" method="post">
           Create a username:
