--- a/templates/display.html
+++ b/templates/display.html
@@ -28,11 +28,12 @@
 	        <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
 	        <!--<li><a href="/browse">Browse</a></li>-->
 	      </ul>
-	      <form class="navbar-form navbar-right">
+	      <form class="navbar-form navbar-right" action="/display/" method="post">
 	             <div class="form-group">
-	               <input type="text" class="form-control" placeholder="Search">
+	               <input type="text" class="form-control" name="lookup" placeholder="Search">
 	             </div>
-	             <button type="submit" class="btn btn-default">Submit</button>
+	             <!-- <button class="btn btn-default" type="submit" name="search" value="search">Submit</button> -->
+	             <input class="btn btn-primary" type="submit" name="search" value="search">
 	      </form>
 	      <ul class="nav navbar-nav navbar-right">
 	        <li><a href="/authenticate">Login</a></li>
@@ -51,7 +52,9 @@
 	    <h3 class="panel-title">{{foodname}}</h3>
 	  </div>
 	  <div class="panel-body">
-	    {{fooddata}}
+	    {% for key in fooddata %}
+	    	{{key}}: {{fooddata[key]}} <br>
+	    {% endfor %}
 	  </div>
 	</div>
 
