usda api implementation pt 1

--- a/templates/display.html
+++ b/templates/display.html
@@ -53,7 +53,7 @@
 	  </div>
 	  <div class="panel-body">
 	<!--     {% for key in fooddata %}
-	    	{{key}}: {{fooddata[key]}} <br>
+	    	{{key}}: {{fooddata[key]}} <br><br>
 	    {% endfor %} -->
 	    {{fooddata}}
 	  </div>
