minor changes in forms

--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -55,10 +55,9 @@
         {{ login_message }}
         <br>
         <form action="/authenticate/" method="post">
-          <input class="form-control"type="text" name="username" placeholder="username">
+          <input class="form-control"type="text" name="username" placeholder="Username">
           <br>
-          <input class="form-control" type="password" name="password" placeholder="password">
-          <input class="form-control" type="password" name="password" placeholder="password">
+          <input class="form-control" type="password" name="password" placeholder="Password">
           <br>
           <br><br>
           <input class="btn btn-primary" type="submit" name="login" value="login">
@@ -69,22 +68,22 @@
         <h1>Register</h1>
         <form action="/authenticate/" method="post">
           Create a username:
-          <input class="form-control" type="text" name="username" placeholder="username">
+          <input class="form-control" type="text" name="username" placeholder="Username">
           <br>
           Create a password:
-          <input class="form-control" type="password" name="password" placeholder="password">
+          <input class="form-control" type="password" name="password" placeholder="Password">
           <br>
           <!-- Confirm your password:
           <input type="password" name="cpassword" placeholder="password">
           <br> -->
           Your age is:
-          <input class="form-control" type="number" name="age" placeholder="age">
+          <input class="form-control" type="number" name="age" placeholder="Age">
           <br>
           Your current height is: 
-          <input class="form-control" type="number" name="height" placeholder="height">
+          <input class="form-control" type="number" name="height" placeholder="Height">
           <br>
           Your current weight is:
-          <input class="form-control" type="number" name="weight" placeholder="weight">
+          <input class="form-control" type="number" name="weight" placeholder="Weight">
           <br><br>
           <input class="btn btn-primary" type="submit" name="register" value="register">
         </form>
