added variables to display user information

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -51,6 +51,11 @@
 	  <li role="presentation" class="active"><a href="/profile">Profile</a></li>
 	  <li role="presentation"><a href="/calorie">Calorie Tracker</a></li>
 	</ul>
+	<h3>Basic information</h3>
+	Gender: {{gender}}<br>
+	Age: {{age}}<br>
+	Height: {{height}}<br>
+	Weight: {{weight}}<br>
 
 </body>
 </html>
