--- a/templates/display.html
+++ b/templates/display.html
@@ -43,25 +43,37 @@
 	</nav>
 
 
-	<h2><center><b>{{foodname}}</b><center></h2>
+	<h3><center><b>Search results for: {{foodname}}</b><center></h2>
 
 	<!-- page header -->
 
-	<div class="panel panel-default">
+<!-- 	<div class="panel panel-default">
 	  <div class="panel-heading">
 	    <h3 class="panel-title">{{foodname}}</h3>
 	  </div>
 	  <div class="panel-body">
 	    {% for search_result in fooddata.keys() %}
-	    	-------------------------------------------------<br>
-	    		{{search_result}} <br>
-            ------------------------------------------------- <br>
+	    		<h3>{{search_result}}</h3> <br>
 	    {% for entry in fooddata[search_result].keys() %}
 	        {{entry}}: {{fooddata[search_result][entry]}} <br>
 	    {% endfor %}
+	    <a class="btn btn-primary btn-lg" href="add" role="button">Add</a>
+	    <hr>
 	    {% endfor %}
 	  </div>
-	</div>
+	</div> -->
+	{% for search_result in fooddata.keys() %}
+		<div class="panel panel-default">
+			  <div class="panel-heading">
+			    <h3 class="panel-title">{{search_result}}</h3>
+			  </div>
+		{% for entry in fooddata[search_result].keys() %}
+	    	<div class="panel-body">{{entry}}: {{fooddata[search_result][entry]}}</div>
+	    {% endfor %}
+	    <a class="btn btn-primary btn-lg" href="/calorie" role="button">Add</a>
+	    </div>
+	{% endfor %}
 
+	
 </body>
 </html>
