--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -11,37 +11,43 @@
 
   <!--NAV BAR-->
  <nav class="navbar navbar-default">
-   <div class="container-fluid">
-     <!-- Brand and toggle get grouped for better mobile display -->
-     <div class="navbar-header">
-       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-         <span class="sr-only">Toggle navigation</span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-       </button>
-       <a class="navbar-brand">Guacamole</a>
-     </div>
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand">Guacamole</a>
+      </div>
 
-     <!-- Collect the nav links, forms, and other content for toggling -->
-     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-       <ul class="nav navbar-nav">
-         <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
-         <!--<li><a href="/browse">Browse</a></li>-->
-       </ul>
-       <form class="navbar-form navbar-right" action="/display/" method="post">
-              <div class="form-group">
-                <input type="text" class="form-control" name="lookup" placeholder="Search">
-              </div>
-              <!-- <button class="btn btn-default" type="submit" name="search" value="search">Submit</button> -->
-              <input class="btn btn-primary" type="submit" name="search" value="search">
-       </form>
-       <ul class="nav navbar-nav navbar-right">
-         <li><a href="/authenticate">Login</a></li>
-       </ul>
-     </div><!-- /.navbar-collapse -->
-   </div><!-- /.container-fluid -->
- </nav>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="/">Home<span class="sr-only">(current)</span></a></li>
+          <!--<li><a href="/browse">Browse</a></li>-->
+        </ul>
+        <form class="navbar-form navbar-left" action="/display/" method="post">
+               <div class="form-group">
+                 <input type="text" class="form-control" name="lookup" placeholder="Search">
+               </div>
+               <!-- <button class="btn btn-default" type="submit" name="search" value="search">Submit</button> -->
+               <input class="btn btn-primary" type="submit" name="search" value="search">
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+            {% if session.user %}
+              
+              <p class="navbar-text">Signed in as <a href="/profile" class="navbar-link">{{username}}</a></p>
+              <li><a href="/logout">Logout</a></li>
+            {% else %}
+              <li><a href="/authenticate">Login</a></li>
+            {% endif %}
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
 
   <!--NAV BAR-->
 
@@ -50,9 +56,13 @@
   <div class="container">
     <div class="row vdivide">
       <div class="col-sm-6 text-center">
-        {{ error }}
         <h1>Login/Register</h1>
-        {{ login_message }}
+        {% if login_message %}
+          <div class="alert alert-danger" role="alert">
+            <span class="sr-only">Error:</span>
+              {{ login_message }}
+          </div>
+        {% endif %}
         <br>
         <form action="/authenticate/" method="post">
           <input class="form-control"type="text" name="username" placeholder="Username">
@@ -64,8 +74,13 @@
         </form>
       </div>
       <div class="col-sm-6 text-center">
-        {{ register_message }}
         <h1>Register</h1>
+        {% if register_message %}
+          <div class="alert alert-danger" role="alert">
+            <span class="sr-only">Error:</span>
+              {{ register_message }}
+          </div>
+        {% endif %}
         <form action="/authenticate/" method="post">
           Create a username:
           <input class="form-control" type="text" name="username" placeholder="Username">
