--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -40,7 +40,7 @@
             {% if session.user %}
               
               <p class="navbar-text">Signed in as <a href="/profile" class="navbar-link">{{username}}</a></p>
-              <li><a href="/logout">Logout</a></li>
+              <li><a href="/logout/">Logout</a></li>
             {% else %}
               <li><a href="/authenticate">Login</a></li>
             {% endif %}
