--- a/templates/display.html
+++ b/templates/display.html
@@ -38,7 +38,7 @@
 		      <ul class="nav navbar-nav navbar-right">
 		      	{% if session.user %}
 		      		<p class="navbar-text">Signed in as <a href="/profile" class="navbar-link">{{username}}</a></p>
-		      		<li><a href="/logout">Logout</a></li>
+		      		<li><a href="/logout/">Logout</a></li>
 		      	{% else %}
 		      	  	<li><a href="/authenticate">Login</a></li>
 		      	{% endif %}
