add gender options

--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -91,6 +91,13 @@
           <!-- Confirm your password:
           <input type="password" name="cpassword" placeholder="password">
           <br> -->
+          Biologically, you're:
+          <div class="radio">
+            <label><input type="radio" name="gender" value="male">Male</label>
+          </div>
+          <div class="radio">
+            <label><input type="radio" name="gender" value="female">Female</label>
+          </div>
           Your age is:
           <input class="form-control" type="number" name="age" placeholder="Age">
           <br>
