finished bmi info retrieval and parsing, added bmi api key

--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login register</title>
+  <title>Login or Register</title>
   <link rel="stylesheet" media="screen" href="../static/bootstrap.min.css">
 </head>
 <body>
@@ -56,7 +56,7 @@
   <div class="container">
     <div class="row vdivide">
       <div class="col-sm-6 text-center">
-        <h1>Login/Register</h1>
+        <h1>Login</h1>
         {% if login_message %}
           <div class="alert alert-danger" role="alert">
             <span class="sr-only">Error:</span>
