--- a/templates/home.html
+++ b/templates/home.html
@@ -1,64 +1,29 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Guacamole</title>
-  <link rel="stylesheet" media="screen" href="../static/bootstrap.min.css">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Guacamole</title>
+    <link rel="stylesheet" media="screen" href="../static/bootstrap.min.css">
+  </head>
 
-<body>
-	<!-- NAV BAR-->
-	<nav class="navbar navbar-default">
-	  <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand">Guacamole</a>
-	    </div>
+  <body>
+    {% extends "base.html" %}
 
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
-	        <!--<li><a href="/browse">Browse</a></li>-->
-	      </ul>
-	      <form class="navbar-form navbar-left" action="/display/" method="post">
-	             <div class="form-group">
-	               <input type="text" class="form-control" name="lookup" placeholder="Search">
-	             </div>
-	             <!-- <button class="btn btn-default" type="submit" name="search" value="search">Submit</button> -->
-	             <input class="btn btn-primary" type="submit" name="search" value="search">
-	      </form>
-	      <ul class="nav navbar-nav navbar-right">
-	      	{% if session.user %}
-	      	  	<p class="navbar-text">Signed in as <a href="/profile" class="navbar-link">{{username}}</a></p>
-	      	  	<li><a href="/logout/">Logout</a></li>
-	      	{% else %}
-	      	  	<li><a href="/authenticate">Login</a></li>
-	      	{% endif %}
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	</nav>
+    {% block content %}
+    <!--JUMBOTRON-->
+    <div class="jumbotron">
+      <div class="container">
+	<h1>I like guac!</h1>
+	<p>Avocadoes are nature's miracles</p>
+	<p><a class="btn btn-primary btn-lg" href="#" role="button">Find me a random food</a></p>
+      </div>
+    </div>
 
-	<!--JUMBOTRON-->
-	<div class="jumbotron">
-		<div class="container">
-		<h1>I like guac!</h1>
-		<p>Avocadoes are nature's miracles</p>
-		<p><a class="btn btn-primary btn-lg" href="#" role="button">Find me a random food</a></p>
-  		</div>
-  	</div>
-
-  	<div class="container">
-  		<p>This is what my website does</p>
-  	</div>
-
-</body>
+    <div class="container">
+      <p>This is what my website does</p>
+    </div>
+    {% endblock %}
+    
+  </body>
 </html>
