--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -38,7 +38,7 @@
         </form>
         <ul class="nav navbar-nav navbar-right">
             {% if session.user %}
-              
+
               <p class="navbar-text">Signed in as <a href="/profile" class="navbar-link">{{username}}</a></p>
               <li><a href="/logout/">Logout</a></li>
             {% else %}
@@ -55,6 +55,8 @@
 
   <div class="container">
     <div class="row vdivide">
+
+      <!-- LOGIN -->
       <div class="col-sm-6 text-center">
         <h1>Login</h1>
         {% if login_message %}
@@ -65,14 +67,16 @@
         {% endif %}
         <br>
         <form action="/authenticate/" method="post">
-          <input class="form-control"type="text" name="username" placeholder="Username">
+          <input class="form-control"type="text" name="username" placeholder="Username" required="true">
           <br>
           <input class="form-control" type="password" name="password" placeholder="Password">
           <br>
           <br><br>
-          <input class="btn btn-primary" type="submit" name="login" value="login">
+          <input class="btn btn-primary" type="submit" name="login" value="login" required="true">
         </form>
       </div>
+
+      <!-- REGISTER -->
       <div class="col-sm-6 text-center">
         <h1>Register</h1>
         {% if register_message %}
@@ -83,33 +87,35 @@
         {% endif %}
         <form action="/authenticate/" method="post">
           Create a username:
-          <input class="form-control" type="text" name="username" placeholder="Username">
+          <input class="form-control" type="text" name="username" placeholder="Username" required="true">
           <br>
           Create a password:
-          <input class="form-control" type="password" name="password" placeholder="Password">
+          <input class="form-control" type="password" name="password" placeholder="Password" required="true">
           <br>
           <!-- Confirm your password:
           <input type="password" name="cpassword" placeholder="password">
           <br> -->
+          Your age is:
+          <input class="form-control" type="number" name="age" placeholder="Age" required="true">
+          <br>
+          Your current height is:
+          <input class="form-control" type="number" name="height" placeholder="Height" required="true">
+          <br>
+          Your current weight is:
+          <input class="form-control" type="number" name="weight" placeholder="Weight" required="true">
+	  <br>
           Biologically, you're:
           <div class="radio">
-            <label><input type="radio" name="gender" value="male">Male</label>
+            <label><input type="radio" name="gender" value="male" required="true">Male</label>
           </div>
           <div class="radio">
             <label><input type="radio" name="gender" value="female">Female</label>
           </div>
-          Your age is:
-          <input class="form-control" type="number" name="age" placeholder="Age">
           <br>
-          Your current height is: 
-          <input class="form-control" type="number" name="height" placeholder="Height">
-          <br>
-          Your current weight is:
-          <input class="form-control" type="number" name="weight" placeholder="Weight">
-          <br><br>
-          <input class="btn btn-primary" type="submit" name="register" value="register">
+          <input class="btn btn-primary" type="submit" name="register" value="register" required="true">
         </form>
       </div>
+
     </div>
   </div>
 
