--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-	<li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
+		<li><a href="/">Home<span class="sr-only">(current)</span></a></li>
+		{% if session.user %}
+			<li><a href="/profile">Profile<span class="sr-only">(current)</span></a></li>
+		{% endif %}
 	<!--<li><a href="/browse">Browse</a></li>-->
       </ul>
       <form class="navbar-form navbar-left" action="/display/" method="post">
