--- a/templates/calorie.html
+++ b/templates/calorie.html
@@ -11,8 +11,8 @@
     {% extends "base.html" %}
     {% block content %}
     <ul class="nav nav-tabs">
-      <li role="presentation" class="active"><a href="/profile">Profile</a></li>
-      <li role="presentation"><a href="/calorie">Calorie Tracker</a></li>
+      <li role="presentation"><a href="/profile">Profile</a></li>
+      <li role="presentation" class="active"><a href="/calorie">Calorie Tracker</a></li>
     </ul>
     {% for date in calorie_display %}
       {{date}} <br>
