Add more changes

--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -105,10 +105,10 @@
           Your age is:
           <input class="form-control" type="number" name="age" placeholder="Age" required="true">
           <br>
-          Your current height is:
+          Your current height (in inches) is:
           <input class="form-control" type="number" name="height" placeholder="Height" required="true">
           <br>
-          Your current weight is:
+          Your current weight (in lbs) is:
           <input class="form-control" type="number" name="weight" placeholder="Weight" required="true">
 	  <br>
           Biologically, you're:
