--- a/templates/home.html
+++ b/templates/home.html
@@ -16,14 +16,13 @@
       <div class="container">
 	<h1>I like guac!</h1>
 	<p>Avocadoes are nature's miracles</p>
-	<p><a class="btn btn-primary btn-lg" href="#" role="button">Find me a random food</a></p>
       </div>
     </div>
 
     <div class="container">
-      <p>This is what my website does</p>
+      <p>This is what my website does.</p>
     </div>
     {% endblock %}
-    
+
   </body>
 </html>
