displayed bmi on profile page

--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -113,10 +113,10 @@
 	  <br>
           Biologically, you're:
           <div class="radio">
-            <label><input type="radio" name="gender" value="male" required="true">Male</label>
+            <label><input type="radio" name="gender" value="m" required="true">Male</label>
           </div>
           <div class="radio">
-            <label><input type="radio" name="gender" value="female">Female</label>
+            <label><input type="radio" name="gender" value="f">Female</label>
           </div>
           <br>
           <input class="btn btn-primary" type="submit" name="register" value="register" required="true">
