--- a/templates/profile.html
+++ b/templates/profile.html
@@ -19,9 +19,13 @@
     <h3>Basic information</h3><hr>
     Gender: {{gender}}<br>
     Age: {{age}}<br>
-    Height: {{height}}<br>
-    Weight: {{weight}}<br>
-    
+    Height: {{height}} inches<br>
+    Weight: {{weight}} lbs<br>
+
+    <h3>BMI</h3><hr>
+    Value: {{value}}<br>
+    Status: {{status}}<br>
+    Risks: {{risks}}<br>
     {% endblock %}
   </body>
 </html>
