--- a/templates/home.html
+++ b/templates/home.html
@@ -1,28 +1,422 @@
 <!DOCTYPE html>
-
 <html lang="en">
-  <head>
+
+<head>
+
     <meta charset="utf-8">
-    <title>Guacamole</title>
-    <link rel="stylesheet" media="screen" href="../static/bootstrap.min.css">
-  </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-  <body>
-    {% extends "base.html" %}
+    <title>GuacitUp</title>
 
-    {% block content %}
-    <!--JUMBOTRON-->
-    <div class="jumbotron">
-      <div class="container">
-	<h1>I like guac!</h1>
-	<p>Avocadoes are nature's miracles</p>
-      </div>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+
+    <!-- Bootstrap core CSS -->
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Material Design Bootstrap -->
+    <link href="../static/css/mdb.min.css" rel="stylesheet">
+
+    <!-- Your custom styles (optional) -->
+    <link href="../static/css/style.css" rel="stylesheet">
+
+    <!-- Template styles -->
+    <style>
+        /* TEMPLATE STYLES */
+        
+        html,
+        body,
+        .view {
+            height: 100%;
+        }
+        /* Navigation*/
+
+        
+        .navbar {
+            background-color: transparent;
+        }
+        
+        .scrolling-navbar {
+            -webkit-transition: background .5s ease-in-out, padding .5s ease-in-out;
+            -moz-transition: background .5s ease-in-out, padding .5s ease-in-out;
+            transition: background .5s ease-in-out, padding .5s ease-in-out;
+        }
+        
+        .top-nav-collapse {
+            background-color: #1C2331;
+        }
+        
+        footer.page-footer {
+            background-color: #1C2331;
+            margin-top: 2rem;
+        }
+        
+        @media only screen and (max-width: 768px) {
+            .navbar {
+                background-color: #1C2331;
+            }
+        }
+        /*Call to action*/
+        
+        .flex-center {
+            color: #fff;
+        }
+        
+        .view {
+            background: url("https://honestchops.com/wp-content/uploads/2014/05/DSC_0099.jpg")
+            no-repeat center center fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+        }
+        /*Contact section*/
+        
+        #contact .fa {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            color: #1C2331;
+        }
+    </style>
+
+</head>
+
+<body>
+
+
+    <!--Navbar-->
+    <nav class="navbar navbar-dark navbar-fixed-top scrolling-navbar">
+
+        <!-- Collapse button-->
+        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapseEx">
+            <i class="fa fa-bars"></i>
+        </button>
+
+        <div class="container">
+
+            <!--Collapse content-->
+            <div class="collapse navbar-toggleable-xs" id="collapseEx">
+                <!--Navbar Brand-->
+                <a class="navbar-brand" href="http://mdbootstrap.com/material-design-for-bootstrap/" target="_blank">GuacTime</a>
+                <!--Links-->
+                <ul class="nav navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#abouto">Featured</a>
+                    </li>
+                    
+                    <form class="form-inline"  action="/display/" method="post">
+                    <input class="form-control" name="lookup" type="text" placeholder="Search">
+
+                    <button class="nav-link nav-item btn btn-primary btn-sm fadeInDown"  style="display: none;" type="submit" name="search" value="search"></button>
+                </form>
+                {% if session.user %}
+                    <li class="nav-item">
+                    <a href="/profile" style="color: #2BBBAD;" class="nav-link">Signed in as {{session.user}}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-primary btn-sm fadeInDown" href="/authenticate">Logout</a>
+                    </li>
+                {% else %}
+               <li class="nav-item">
+                        <a class="nav-link btn btn-primary btn-sm fadeInDown" href="/authenticate">Login</a>
+                    </li>
+                 {% endif %}
+
+                </ul>
+              
+                    <!-- <a href="/profile" style="color: #2BBBAD;" class="nav-link">Signed in as {{session.user}}</a>
+                    <li class="nav-item">
+ -->
+
+            </div>
+            <!--/.Collapse content-->
+
+        </div>
+
+    </nav>
+    <!--/.Navbar-->
+
+    <!--Mask-->
+    <div class="view hm-black-strong">
+        <div class="full-bg-img flex-center">
+            <ul>
+                <li>
+                    <h1 class="h1-responsive wow fadeInDown" data-wow-delay="0.2s">Let's eat something healthy today!</h1></li>
+                <li>
+                    <p class="wow fadeInDown">#1 Nutrition &amp; Calorie Tracking App</p>
+                </li>
+                <li>
+                    <br>
+                    <a target="_blank" href="https://www.google.com" class="btn btn-default btn-lg wow fadeInRight" data-wow-delay="0.2s">Learn more</a>
+                </li>
+            </ul>
+        </div>
     </div>
+    <!--/.Mask-->
 
-    <div class="container">
-      <p>This is what my website does.</p>
+    <!-- Main container-->
+    <div id="abouto" class="container">
+
+        <div class="divider-new">
+            <h2 class="h2-responsive wow bounceIn">About us</h2>
+        </div>
+
+        <!--Section: About-->
+        <section id="about" class="text-xs-center wow bounceIn" data-wow-delay="0.2s">
+
+            <p>We believe — and medical studies prove — that the best way to lose weight and keep it off is to simply keep track of the foods you eat. Gimmicky machines and fad diets don't work, so we designed a free website and mobile apps that make calorie counting and food tracking easy. </p>
+
+        </section>
+        <!--Section: About-->
+
+        <div class="divider-new">
+            <h2 class="h2-responsive wow fadeInDown">Best features</h2>
+        </div>
+
+        <!--Section: Best features-->
+        <section id="best-features">
+
+            <div class="row">
+
+                <!--First columnn-->
+                <div class="col-lg-3">
+                    <!--Card-->
+                    <div class="card wow fadeInUp">
+
+                        <!--Card image-->
+                        <div class="view overlay hm-white-slight">
+                            <img src="http://5dwallpaper.com/wp-content/uploads/2016/07/food-wallpaper5.jpg" class="img-fluid" alt="">
+                            <a>
+                                <div class="mask"></div>
+                            </a>
+                        </div>
+                        <!--/.Card image-->
+
+                        <!--Card content-->
+                        <div class="card-block text-xs-center">
+                            <!--Title-->
+                            <h4 class="card-title">Shish Kabob</h4>
+                            <hr>
+                            <!--Text-->
+                            <p class="card-text">A dish consisting of pieces of seasoned meat and sometimes vegetables roasted on skewers and served with condiments.</p>
+                        </div>
+                        <!--/.Card content-->
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--First columnn-->
+
+                <!--Second columnn-->
+                <div class="col-lg-3">
+                    <!--Card-->
+                    <div class="card wow fadeInUp" data-wow-delay="0.2s">
+
+                        <!--Card image-->
+                        <div class="view overlay hm-white-slight">
+                            <img src="http://a.hilanddairy.envoydev.com/sites/default/files/recipe_fried_chicken.jpg" class="img-fluid" alt="">
+                            <a>
+                                <div class="mask"></div>
+                            </a>
+                        </div>
+                        <!--/.Card image-->
+
+                        <!--Card content-->
+                        <div class="card-block text-xs-center">
+                            <!--Title-->
+                            <h4 class="card-title">Buttermilk Fried Chicken</h4>
+                            <hr>
+                            <!--Text-->
+                            <p class="card-text">Chicken pieces floured or battered and then dipped in buttermilk before being pan-fried, deep fried, or pressure fried. The breading and coating adds a crisp coating or crust and added flavor to the exterior.</p>
+                        </div>
+                        <!--/.Card content-->
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Second columnn-->
+
+                <!--Third columnn-->
+                <div class="col-lg-3">
+                    <!--Card-->
+                    <div class="card wow fadeInUp" data-wow-delay="0.4s">
+
+                        <!--Card image-->
+                        <div class="view overlay hm-white-slight">
+                            <img src="https://s-media-cache-ak0.pinimg.com/736x/26/0f/49/260f49edb64b3f858d77659c4ba72388.jpg" class="img-fluid" alt="">
+                            <a>
+                                <div class="mask"></div>
+                            </a>
+                        </div>
+                        <!--/.Card image-->
+
+                        <!--Card content-->
+                        <div class="card-block text-xs-center">
+                            <!--Title-->
+                            <h4 class="card-title">Steak Tacos</h4>
+                            <hr>
+                            <!--Text-->
+                            <p class="card-text">A Mexican dish consisting of a fried tortilla, typically folded, filled with various mixtures, such as seasoned meat, beans, lettuce, and tomatoes.</p>
+                        </div>
+                        <!--/.Card content-->
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Third columnn-->
+
+                <!--First columnn-->
+                <div class="col-lg-3">
+                    <!--Card-->
+                    <div class="card wow fadeInUp" data-wow-delay="0.6s">
+
+                        <!--Card image-->
+                        <div class="view overlay hm-white-slight">
+                            <img src="http://images.shape.mdpcdn.com/sites/shape.com/files/styles/slide/public/healthy-chinese-food_0.jpg" class="img-fluid" alt="">
+                            <a>
+                                <div class="mask"></div>
+                            </a>
+                        </div>
+                        <!--/.Card image-->
+
+                        <!--Card content-->
+                        <div class="card-block text-xs-center">
+                            <!--Title-->
+                            <h4 class="card-title">Stir-Fry Noodles</h4>
+                            <hr>
+                            <!--Text-->
+                            <p class="card-text">Vegetables and meat cooked in a small amount of very hot oil while being stirred in a wok.</p>
+                        </div>
+                        <!--/.Card content-->
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--First columnn-->
+            </div>
+
+        </section>
+        <!--/Section: Best features-->
+
+        <div class="divider-new">
+            <h2 class="h2-responsive wow fadeInUp">Contact us</h2>
+        </div>
+
+        <!--Section: Contact-->
+        <section id="contact">
+            <div class="row">
+                <!--First column-->
+                <div class="col-md-8">
+                    <div id="map-container" class="z-depth-1 wow fadeInUp" style="height: 300px"></div>
+                </div>
+                <!--/First column-->
+
+                <!--Second column-->
+                <div class="col-md-4">
+                    <ul class="text-xs-center">
+                        <li class="wow fadeInUp" data-wow-delay="0.2s"><i class="fa fa-map-marker"></i>
+                            <p>New York, NY 10021, USA</p>
+                        </li>
+
+                        <li class="wow fadeInUp" data-wow-delay="0.3s"><i class="fa fa-phone"></i>
+                            <p>+ 212 345 6789/p>
+                        </li>
+
+                        <li class="wow fadeInUp" data-wow-delay="0.4s"><i class="fa fa-envelope"></i>
+                            <p>jchua14@gmail.com</p>
+                        </li>
+                    </ul>
+                </div>
+                <!--/Second column-->
+            </div>
+        </section>
+        <!--Section: Contact-->
+
     </div>
-    {% endblock %}
+    <!--/ Main container-->
 
-  </body>
+
+
+    <!--Footer-->
+    <footer class="page-footer center-on-small-only">
+
+        <!--Footer Links-->
+        
+       
+        <!--/.Footer Links-->
+
+        <div class="footer-copyright">
+            <div class="container-fluid">
+                © 2015 Copyright: Team Guac
+
+            </div>
+        </div>
+        <!--/.Copyright-->
+
+    </footer>
+    <!--/.Footer-->
+
+
+    <!-- SCRIPTS -->
+
+    <script type="text/javascript" src="../static/js/jquery-3.1.1.min.js"></script>
+
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="../static/js/tether.min.js"></script>
+
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
+
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="../static/js/mdb.min.js"></script>
+
+    <!--Google Maps-->
+    <script src="http://maps.google.com/maps/api/js"></script>
+
+    <script>
+        function init_map() {
+
+            var var_location = new google.maps.LatLng(40.725118, -73.997699);
+
+            var var_mapoptions = {
+                center: var_location,
+
+                zoom: 14
+            };
+
+            var var_marker = new google.maps.Marker({
+                position: var_location,
+                map: var_map,
+                title: "New York"
+            });
+
+            var var_map = new google.maps.Map(document.getElementById("map-container"),
+                var_mapoptions);
+
+            var_marker.setMap(var_map);
+
+        }
+
+        google.maps.event.addDomListener(window, 'load', init_map);
+
+
+
+
+
+
+
+    </script>
+
+    <!-- Animations init-->
+    <script>
+        new WOW().init();
+    </script>
+
+
+</body>
+
 </html>
