added update li

--- a/templates/calorie.html
+++ b/templates/calorie.html
@@ -13,6 +13,7 @@
     <ul class="nav nav-tabs">
       <li role="presentation"><a href="/profile">Profile</a></li>
       <li role="presentation" class="active"><a href="/calorie">Calorie Tracker</a></li>
+      <li role="presentation"><a href="/update">Update Information</a></li>
     </ul>
     {% if not calorie_display %}
       <center><h5>It seems you haven't added any food items yet. Search for some and add, add, add! Unless you don't eat (please eat) </h4></center>
