--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,6 +15,7 @@
     <ul class="nav nav-tabs">
       <li role="presentation" class="active"><a href="/profile">Profile</a></li>
       <li role="presentation"><a href="/calorie">Calorie Tracker</a></li>
+      <li role="presentation"><a href="/update">Update Information</a></li>
     </ul>
     <h3>Basic information</h3><hr>
     Gender: {{gender}}<br>
