update route and message

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,7 +11,7 @@
     {% extends "base.html" %}
     {% block content %}
     <!-- tabs -->
-
+    {{ update }}
     <ul class="nav nav-tabs">
       <li role="presentation" class="active"><a href="/profile">Profile</a></li>
       <li role="presentation"><a href="/calorie">Calorie Tracker</a></li>
