--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,7 +11,12 @@
     {% extends "base.html" %}
     {% block content %}
     <!-- tabs -->
-    {{ update }}
+    {% if update %}
+        <div class="alert alert-success" role="alert">
+          <span class="sr-only">Update:</span>
+            {{ update }}
+        </div>
+    {% endif %}
     <ul class="nav nav-tabs">
       <li role="presentation" class="active"><a href="/profile">Profile</a></li>
       <li role="presentation"><a href="/calorie">Calorie Tracker</a></li>
