completed information update form

--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -72,7 +72,7 @@
           <input class="form-control" type="password" name="password" placeholder="Password">
           <br>
           <br><br>
-          <input class="btn btn-primary" type="submit" name="login" value="login" required="true">
+          <input class="btn btn-primary" type="submit" name="login" value="Login" required="true">
         </form>
       </div>
 
@@ -119,7 +119,7 @@
             <label><input type="radio" name="gender" value="f">Female</label>
           </div>
           <br>
-          <input class="btn btn-primary" type="submit" name="register" value="register" required="true">
+          <input class="btn btn-primary" type="submit" name="register" value="Register" required="true">
         </form>
       </div>
 
