--- a/templates/update.html
+++ b/templates/update.html
@@ -26,7 +26,7 @@
         <h5>Update Height:</h5><input class="form-control" type="number" name="height" placeholder="Height">
         <h5>Update Weight:</h5><input class="form-control" type="number" name="weight" placeholder="Weight">
         <br/>
-        <input class="btn btn-primary" type="submit" name="update" value="update">
+        <input class="btn btn-primary" type="submit" name="update" value="Update">
       </form>
     {% endblock %}
   </body>
