--- a/templates/update.html
+++ b/templates/update.html
@@ -11,10 +11,17 @@
     {% extends "base.html" %}
     {% block content %}
     {% if update %}
+      {% if color %}
+        <div class="alert alert-danger" role="alert">
+          <span class="sr-only">Update:</span>
+            {{ update }}
+        </div>
+      {% else %}
         <div class="alert alert-success" role="alert">
           <span class="sr-only">Update:</span>
             {{ update }}
         </div>
+      {% endif %}
     {% endif %}
       <ul class="nav nav-tabs">
         <li role="presentation"><a href="/profile">Profile</a></li>
