--- a/templates/calorie.html
+++ b/templates/calorie.html
@@ -101,7 +101,7 @@
                 <a class="navbar-brand" href="" target="_blank">GuacTime</a>
                 <!--Links-->
                 <ul class="nav navbar-nav">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
                     </li>
                     {% if session.user %}
