--- a/templates/calorie.html
+++ b/templates/calorie.html
@@ -146,13 +146,13 @@
     </nav>
     <!--/.Navbar-->
 
-  
+
 
 
 
 <!-- Nav tabs -->
 
-  <div class="container" style="padding-top: 100px; display: inline-block;"> 
+  <div class="container" style="padding-top: 100px;">
     {% block content %}
     {% if not calorie_display %}
       <center><h5>It seems you haven't added any food items yet. Search for some and add, add, add! Unless you don't eat (please eat) </h4></center>
