--- a/templates/display.html
+++ b/templates/display.html
@@ -145,13 +145,13 @@
     </nav>
     <!--/.Navbar-->
 
-  
+
 
 
 
 <!-- Nav tabs -->
 
-  <div class="container" style="padding-top: 100px; display: inline-block;"> 
+  <div class="container" style="padding-top: 100px;">
 
   <div class="row">
   {% block content %}
